# weather-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  weather.rs
