[package]
name = "weather-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
